--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "tratingComma": "es5",
+  "trailingComma": "es5",
   "bracketSpacing": true,
   "arrowParens": "always",
   "endOfLine": "lf"
