--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "test": "vitest --run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "predeploy": "pnpm build",
+    "deploy": "pnpm exec gh-pages -d dist",
     "diff": "git add -N . && git diff",
     "dev:pm2": "pnpm exec pm2 start ecosystem.config.cjs",
     "dev:pm2:stop": "pnpm exec pm2 stop bullet-heaven-dev",
@@ -39,6 +41,7 @@
     "@vitest/coverage-v8": "^4.0.18",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
+    "gh-pages": "^6.3.0",
     "jsdom": "^28.1.0",
     "pm2": "^6.0.14",
     "prettier": "^3.0.0",
