--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "dev:pm2:restart": "pnpm exec pm2 restart bullet-heaven-dev",
     "dev:pm2:status": "pnpm exec pm2 status bullet-heaven-dev",
     "dev:pm2:logs": "pnpm exec pm2 logs bullet-heaven-dev",
-    "h": "node -e \"const p=JSON.parse(require('fs').readFileSync('package.json','utf8'));console.log('\\nДоступные команды:\\n');Object.entries(p.scripts).forEach(([k,v])=>console.log('  pnpm '+k.padEnd(20)+v));console.log()\""
+    "tauri:dev": "pnpm exec tauri dev",
+    "tauri:build": "pnpm exec tauri build",
+    "h": "node -e \"const p=JSON.parse(require('fs').readFileSync('package.json','utf8'));console.log('\\nДоступные команды:\\n');Object.entries(p.scripts).forEach(([k,v])=>console.log('  pnpm '+k.padEnd(20)+v));console.log()\"",
+    "prepare": "husky"
   },
   "dependencies": {
     "miniplex": "^2.0.0",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@tauri-apps/cli": "^2.10.0",
     "@types/node": "^25.2.3",
     "@types/three": "^0.182.0",
     "@vitejs/plugin-basic-ssl": "^2.1.4",
@@ -41,7 +45,9 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "gh-pages": "^6.3.0",
+    "husky": "^9.1.7",
     "jsdom": "^28.1.0",
+    "lint-staged": "^16.2.7",
     "pm2": "^6.0.14",
     "prettier": "^3.0.0",
     "typescript": "^5.0.0",
@@ -52,6 +58,15 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
+    ]
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix --max-warnings 0"
+    ],
+    "*.{json,md,css,yml,yaml}": [
+      "prettier --write"
     ]
   }
 }
