#2 - added upgrade levels, new systems (regen, magnetic field, chain explosion, drops), combat enhancements (armor, deflect, multishot, crit), drop/pickup system, enemy HP scaling, audio autoplay fix

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format:docs": "prettier --write --no-ignore docs/**/*.md README.md .agent/workflows/*.md",
     "lint:docs": "prettier --check --no-ignore docs/**/*.md README.md .agent/workflows/*.md",
     "typecheck": "tsc --noEmit",
-    "check": "pnpm format:check && pnpm lint && pnpm typecheck",
+    "check": "pnpm format:check && pnpm lint && pnpm typecheck && pnpm test",
+    "check:all": "pnpm format:check && pnpm lint && pnpm typecheck && pnpm test:coverage",
     "test": "vitest --run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
